--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
   <body>
     <h1>Heading</h1>
     <p>This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <h1></h1>
+    <div>
+
+    </div>
   </body>
 </html>
