--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     <link rel="stylesheet" href="assets/stylesheets/styles.min.css">
   </head>
   <body>
-    <h1>Heading</h1>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
     <p>This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
     <div class="box">
       Here's some content
