More fancy styles

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
-    <p>This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. <a href="#">New devices</a> have such high resolution displays that individual pixels become imperceptibly small. <q>Other devices</q>, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <p class="drop-cap">This, like many of our other <code>traditional perceptions of digital</code> and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. <a href="#">New devices</a> have such high resolution displays that individual pixels become imperceptibly small. <q>Other devices</q>, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
 
     <blockquote>
       <p>Insanity: doing the same thing over and over again and expecting
@@ -27,6 +27,15 @@
     </blockquote>
 
     <p class="lead">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <hr>
+
+    <pre>
+      &lt;blockquote&gt;
+        &lt;p&gt;Insanity: doing the same thing over and over again and expecting
+         &lt;q&gt;different&lt;/q&gt; results.&lt;/p&gt;
+        &lt;cite&gt;Albert Einstein&lt;/cite&gt;
+      &lt;/blockquote&gt;
+    </pre>
     <p class="xs">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
     <div class="box">
       Here's some content
