Mostly finish BS styles

--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
     <h6>Heading 6</h6>
     <p class="drop-cap">This, like many of our other <code>traditional perceptions of digital</code> and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. <a href="#">New devices</a> have such high resolution displays that individual pixels become imperceptibly small. <q>Other devices</q>, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
 
+    <dl class="none">
+      <dt>Description lists</dt>
+      <dd>A description list is perfect for defining terms.</dd>
+      <dt>Euismod</dt>
+      <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
+      <dd>Donec id elit non mi porta gravida at eget metus.</dd>
+      <dt>Malesuada porta</dt>
+      <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
+      <dt>Felis euismod semper eget lacinia</dt>
+      <dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
+    </dl>
+
+    <p class="text-muted bg-muted">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+
+    <p class="text-primary bg-primary">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+
+    <p class="text-success bg-success">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+
+    <p class="text-info bg-info">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+
+    <p class="text-warning bg-warning">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+
+    <p class="text-danger bg-danger">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+
     <blockquote>
       <p>Insanity: doing the same thing over and over again and expecting
        <q>different</q> results.</p>
