Finish up more styles

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@
         &lt;cite&gt;Albert Einstein&lt;/cite&gt;
       &lt;/blockquote&gt;
     </pre>
-    <p class="xs">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
     <div class="box">
       Here's some content
     </div>
