--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     <link rel="stylesheet" href="assets/stylesheets/styles.min.css">
   </head>
   <body>
+
+  <div class="test column-1">1</div>
+  <div class="test column-2">2</div>
+  <div class="test column-3">3</div>
+  <div class="test column-4">4</div>
+  <div class="test column-5">5</div>
+  <div class="test column-6">6</div>
+  <div class="test column-7">7</div>
+  <div class="test column-8">8</div>
+
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
