--- a/index.html
+++ b/index.html
@@ -13,60 +13,25 @@
   </head>
   <body>
 
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-    <p class="drop-cap">This, like many of our other <code>traditional perceptions of digital</code> and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. <a href="#">New devices</a> have such high resolution displays that individual pixels become imperceptibly small. <q>Other devices</q>, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
+    <h1>Default Form</h1>
 
-    <dl class="none">
-      <dt>Description lists</dt>
-      <dd>A description list is perfect for defining terms.</dd>
-      <dt>Euismod</dt>
-      <dd>Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.</dd>
-      <dd>Donec id elit non mi porta gravida at eget metus.</dd>
-      <dt>Malesuada porta</dt>
-      <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
-      <dt>Felis euismod semper eget lacinia</dt>
-      <dd>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</dd>
-    </dl>
+    <form class="pure-form">
+      <fieldset>
+        <legend>A compact inline form</legend>
 
-    <p class="text-muted bg-muted">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+        <input type="email" placeholder="Email">
+        <input type="password" placeholder="Password">
 
-    <p class="text-primary bg-primary">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+        <label for="remember">
+            <input id="remember" type="checkbox"> Remember me
+        </label>
 
-    <p class="text-success bg-success">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+        <button type="submit" class="pure-button pure-button-primary">Sign in</button>
+      </fieldset>
+    </form>
 
-    <p class="text-info bg-info">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
+    <h1>Inline Form</h1>
+    <h1>Horizontal Form</h1>
 
-    <p class="text-warning bg-warning">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
-
-    <p class="text-danger bg-danger">New devices have such high resolution displays that individual pixels become imperceptibly small</p>
-
-    <blockquote>
-      <p>Insanity: doing the same thing over and over again and expecting
-       <q>different</q> results.</p>
-      <cite>Albert Einstein</cite>
-    </blockquote>
-
-    <p class="lead">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
-    <hr>
-
-    <pre>
-      &lt;blockquote&gt;
-        &lt;p&gt;Insanity: doing the same thing over and over again and expecting
-         &lt;q&gt;different&lt;/q&gt; results.&lt;/p&gt;
-        &lt;cite&gt;Albert Einstein&lt;/cite&gt;
-      &lt;/blockquote&gt;
-    </pre>
-    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
-    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
-    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
-    <p class="indent">This, like many of our other traditional perceptions of digital and interactive experiences, are either changing or being replaced altogether as we enter the post-PC era. New devices have such high resolution displays that individual pixels become imperceptibly small. Other devices, like the Amazon Kindle, eschew pixels altogether — opting to use electronic ink.</p>
-    <div class="box">
-      Here's some content
-    </div>
   </body>
 </html>
