Form checkbox updates

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <form class="form-inline">
       <fieldset>
         <legend>A compact inline form</legend>
+        Hello, my name is
+        <input class="form-control" type="text" placeholder="Name">
+        and my email address is
         <input class="form-control" type="email" placeholder="Email">
         <input class="form-control" type="password" placeholder="Password">
         <label for="remember">
@@ -82,11 +85,12 @@
 
         <div class="form-controls">
           <label for="cb" class="checkbox">
-            <input class="form-control" id="cb" type="checkbox"> I've read the T's and C's
+            <input id="cb" type="checkbox"> I've read the T's and C's
           </label>
 
           <button type="submit" class="button button-primary">Submit</button>
         </div>
+
       </fieldset>
     </form>
     <h3>Input Groups</h3>
