--- a/index.html
+++ b/index.html
@@ -13,6 +13,42 @@
   </head>
   <body>
 
+    <section class="buttons">
+      <a class="button button-default" href="#">Button</a>
+      <a class="button button-primary" href="#">Button</a>
+      <a class="button button-success" href="#">Button</a>
+      <a class="button button-info" href="#">Button</a>
+      <a class="button button-warning" href="#">Button</a>
+      <a class="button button-danger" href="#">Button</a>
+    </section>
+
+    <section class="buttons">
+      <a class="button button-default button-lg" href="#">Button</a>
+      <a class="button button-primary button-lg" href="#">Button</a>
+      <a class="button button-success button-lg" href="#">Button</a>
+      <a class="button button-info button-lg" href="#">Button</a>
+      <a class="button button-warning button-lg" href="#">Button</a>
+      <a class="button button-danger button-lg" href="#">Button</a>
+    </section>
+
+    <section class="buttons">
+      <a class="button button-default button-sm" href="#">Button</a>
+      <a class="button button-primary button-sm" href="#">Button</a>
+      <a class="button button-success button-sm" href="#">Button</a>
+      <a class="button button-info button-sm" href="#">Button</a>
+      <a class="button button-warning button-sm" href="#">Button</a>
+      <a class="button button-danger button-sm" href="#">Button</a>
+    </section>
+
+    <section class="buttons">
+      <a class="button button-default button-block" href="#">Button</a>
+      <a class="button button-primary button-block" href="#">Button</a>
+      <a class="button button-success button-block" href="#">Button</a>
+      <a class="button button-info button-block" href="#">Button</a>
+      <a class="button button-warning button-block" href="#">Button</a>
+      <a class="button button-danger button-block" href="#">Button</a>
+    </section>
+
     <h1>Layouts</h1>
 
     <h3>Default stacked Form</h3>
