--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </label>
       </div>
 
-      <div class="form-group">
+      <div class="form-group has-success">
         <label>This weekend:</label>
         <label class="radio">
           <input type="radio" name="optionsRadios" value="option1" checked>
@@ -97,14 +97,16 @@
     <h3>Horizontal Form</h3>
 
     <form class="form form-horizontal">
-      <div class="form-group">
+      <div class="form-group has-error">
         <label for="name">Username</label>
         <input class="control" type="text" placeholder="Username">
+        <span class="form-help-inline">Username is already taken</span>
       </div>
 
-      <div class="form-group">
+      <div class="form-group has-success">
         <label for="password">Password</label>
         <input class="control" type="password" placeholder="Password">
+        <span class="form-help-inline">✓</span>
       </div>
 
       <div class="form-group">
