--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
   </head>
   <body>
 
+    <h1>Twelve</h1>
+    <div class="row">
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-one">One</div>
+    </div>
+
+    <h1>Mixed</h1>
+    <div class="row">
+      <div class="grid grid-one">One</div>
+      <div class="grid grid-two">One</div>
+      <div class="grid grid-three">One</div>
+      <div class="grid grid-six">One</div>
+    </div>
+
+    <h1>Push</h1>
+
+
     <h1>Layouts</h1>
 
     <h3>Default stacked Form</h3>
