--- a/index.html
+++ b/index.html
@@ -13,6 +13,38 @@
   </head>
   <body>
 
+  <h1>Tables</h1>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <td> One</td>
+        <td> Two</td>
+        <td> Three</td>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>A</td>
+        <td>B</td>
+        <td>C</td>
+      </tr>
+      <tr>
+        <td>D</td>
+        <td>E</td>
+        <td>F</td>
+      </tr>
+      <tr>
+        <td>G</td>
+        <td>H</td>
+        <td>I</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr></tr>
+    </tfoot>
+  </table>
+
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
